--- a/.github/workflows/user_info.yml
+++ b/.github/workflows/user_info.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - name: get user info
         run: |
-          echo github.event.pusher.name
+          echo ${{github.event.pusher.name}}
