--- a/.github/workflows/user_info.yml
+++ b/.github/workflows/user_info.yml
@@ -15,3 +15,7 @@ jobs:
       - name: get user info
         run: |
           echo ${{github.event.pusher.name}}
+      - name: condition on user name
+        if: github.event.pusher.name = "hvaldecantos" || github.event.pusher.name = "hector-valdecantos"
+        run: |
+          echo "OK"
