--- a/.github/workflows/user_info.yml
+++ b/.github/workflows/user_info.yml
@@ -17,7 +17,7 @@ jobs:
           echo ${{github.event.pusher.name}}
       - name: condition on user name
         if: |
-          github.event.pusher.name != 'hvaldecantos' ||
+          github.event.pusher.name != 'hvaldecantos' &&
           github.event.pusher.name != 'hector-valdecantos'
         run: |
           echo "OK"
